--- a/appveyor.yml
+++ b/appveyor.yml
@@ -14,7 +14,7 @@ test_script:
   # Output useful info for debugging.
   - node --version
   - npm --version
-  # run tests
+  # run testing
   - npm test
 
 # Don't actually build.
