--- a/appveyor.yml
+++ b/appveyor.yml
@@ -5,7 +5,7 @@ environment:
 # Install scripts. (runs after repo cloning)
 install:
   # Get the latest stable version of Node.js or io.js (using PowerShell)
-  - ps: Install-Product node $env:nodejs_version $env:platform
+  - ps: Install-Product node $env:nodejs_version
   # install modules
   - npm install
 
@@ -19,6 +19,3 @@ test_script:
 
 # Don't actually build.
 build: off
-
-# Set build version format here instead of in the admin panel.
-version: "{build}"
