--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "npm-run-all --parallel security-check open:src lint:watch test:watch start-mock-api",
     "open:src": "babel-node buildScripts/srcServer.js",
     "security-check": "nsp check",
-    "localtunnel": "lt --port 3000 --subdomain developertest ",
+    "localtunnel": "lt --port 8088 --subdomain developertest ",
     "sharedev": "npm-run-all --parallel open:src localtunnel",
     "lint": "esw webpack.config.* src buildScripts --color",
     "lint:watch": "npm run lint -- --watch",
@@ -15,7 +15,7 @@
     "test:watch": "npm run test -- --watch",
     "generate-mock-data": "babel-node buildScripts/generateMockData",
     "prestart-mock-api": "npm run generate-mock-data",
-    "start-mock-api": "json-server --watch src/api/db.json --port 3001"
+    "start-mock-api": "json-server --watch src/api/db.json --port 8089"
   },
   "repository": {
     "type": "git"
@@ -23,6 +23,7 @@
   "author": "Ken Brunet",
   "license": "MIT",
   "dependencies": {
+    "es6-promise": "^4.1.1",
     "whatwg-fetch": "^1.0.0"
   },
   "devDependencies": {
